# sdl3-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  TODO.md  build.rs  changelog.md  cliff.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: CI.yml  changelog.yml  checks.yml  fmt.yml  lint_pr_title.yml  pubilsh-crate.yml  publish-crate.yml  tag-release.yml
examples/: animation.rs  audio-capture-and-replay.rs  audio-queue-squarewave.rs  audio-squarewave.rs  audio-wav.rs  audio-whitenoise.rs  cursor.rs  demo.rs  dialog.rs  draw_triangle.rs  events.rs  filesystem.rs  game-controller.rs  game-of-life-unsafe-textures.rs  game-of-life.rs  gamepad.rs  gfx-demo.rs  gpu-clear.rs  gpu-cube.rs  gpu-particles.rs  gpu-texture.rs  gpu-triangle.rs  haptic.rs  image-demo.rs  joystick.rs  keyboard-state.rs  log.rs  main-callbacks-api.rs  message-box.rs  mixer-demo.rs  mouse-state.rs  net-echo.rs  no-renderer.rs  properties.rs  relative-mouse-state.rs  render-geometry.rs  renderer-target.rs  renderer-texture.rs  renderer-yuv.rs  resource-manager.rs  (+6 more)
examples/demo_games/: README.md  a02_woodeneye_008.rs
examples/raw-window-handle-with-wgpu/: main.rs
examples/renderer/: README.md  a01_change_the_color.rs  a02_primitives.rs  a03_lines.rs  a04_points.rs  a05_rectangles.rs  a06_textures_lifetime_solution.rs  a07_streaming_textures.rs  a08_rotating_textures.rs  a09_scaling_textures.rs
examples/shaders/: compile.sh  cube-texture.frag  cube-texture.frag.spv  cube-texture.vert  cube-texture.vert.spv  cube.frag  cube.vert  cube.vert.spv  particles.comp  particles.comp.spv  particles.frag  particles.vert  particles.vert.spv  triangle.frag  triangle.vert  triangle.vert.spv
sdl3-sys/: Cargo.toml  sdl_bindings.rs
src/sdl3/: audio.rs  clipboard.rs  common.rs  controller.rs  cpuinfo.rs  dialog.rs  event.rs  filesystem.rs  gamepad.rs  guid.rs  haptic.rs  hint.rs  iostream.rs  joystick.rs  lib.rs  log.rs  messagebox.rs  pen.rs  pixels.rs  properties.rs  raw_window_handle.rs  rect.rs  render.rs  rwops.rs  sdl.rs  sdlmain.rs  sensor.rs  surface.rs  timer.rs  touch.rs  url.rs  util.rs  version.rs  video.rs
src/sdl3/gfx/: framerate.rs  mod.rs  primitives.rs  rotozoom.rs
src/sdl3/gpu/: abstraction.rs  auto_trait.rs  buffer.rs  command_buffer.rs  device.rs  enums.rs  info_struct.rs  mod.rs  pass.rs  pass_compute.rs  pass_copy.rs  pass_render.rs  pipeline.rs  shader.rs  swapchain.rs  texture.rs  util.rs
src/sdl3/gpu/command_buffer/: compute.rs  copy.rs  fence.rs  mod.rs  render.rs  swapchain.rs
src/sdl3/gpu/resource/: buffer.rs  builders.rs  compute_pipeline.rs  device.rs  graphics_pipeline.rs  mod.rs  sampler.rs  shader.rs  texture.rs  transfer_buffer.rs
src/sdl3/hint/: names.rs
src/sdl3/image/: mod.rs
src/sdl3/keyboard/: keycode.rs  mod.rs  scancode.rs
src/sdl3/mixer/: audio.rs  device.rs  group.rs  mod.rs  track.rs
src/sdl3/mouse/: mod.rs  relative.rs
src/sdl3/net/: mod.rs
src/sdl3/ttf/: context.rs  engine.rs  font.rs  mod.rs
tests/: audio.rs  clipboard.rs  events.rs  iostream.rs  raw_window_handle.rs  render.rs  video.rs
