[package]
name = "sdl3"
description = "Cross-platform multimedia"
repository = "https://github.com/revmischa/sdl3-rs"
documentation = "https://docs.rs/sdl3/latest/sdl3/"
version = "0.11.7"
license = "MIT"
authors = [
    "Tony Aldridge <tony@angry-lawyer.com>",
    "Cobrand <cobrandw@gmail.com>",
    "Mischa Spiegelmock <me@mish.dev>",
    "Lokathor <@Lokathor@mastodon.social>",
]
keywords = ["graphics", "engine", "cross-platform", "input", "audio"]
categories = ["rendering", "api-bindings", "game-engines", "multimedia"]
readme = "README.md"
resolver = "2"
edition = "2021"

[lib]
name = "sdl3"
path = "src/sdl3/lib.rs"

[dependencies]
bitflags = "1.2.1"
libc = "0.2.92"
lazy_static = "1.4.0"

[dependencies.sdl3-sys]
version = "0.1.3+SDL3-preview-3.1.6"

[dependencies.c_vec]
# allow both 1.* and 2.0 versions
version = ">= 1.0"
optional = true

[dev-dependencies]
rand = "0.7"
wgpu = { version = "0.14", features = ["spirv"] }
pollster = "0.2.4"
env_logger = "0.9.0"

[dependencies.raw-window-handle]
version = "0.5.0"
optional = true

[features]
# various ways to link to libsdl3
# provided by sdl3-sys: https://github.com/maia-s/sdl3-sys-rs/tree/main/sdl3-sys#usage
use-pkg-config = ["sdl3-sys/use-pkg-config"]
use-vcpkg = ["sdl3-sys/use-vcpkg"]
static-link = ["sdl3-sys/link-static"]
link-framework = ["sdl3-sys/link-framework"]
build-from-source = ["sdl3-sys/build-from-source"]
build-from-source-static = ["sdl3-sys/build-from-source-static"]

unsafe_textures = []
default = []
gfx = ["c_vec"]      #, "sdl3-sys/gfx"]
#mixer = ["sdl3-sys/mixer"]
#image = ["sdl3-sys/image"]
#ttf = ["sdl3-sys/ttf"]
# Use hidapi support in SDL. Only 2.0.12 and after
hidapi = []
# test_mode allows SDL to be initialised from a thread that is not the main thread
test-mode = []


[package.metadata.docs.rs]
#features = ["default", "gfx", "mixer", "image", "ttf"]
#features = ["default", "gfx"]
features = ["default"]

[[example]]
name = "animation"

[[example]]
name = "audio-capture-and-replay"

[[example]]
name = "audio-queue-squarewave"

[[example]]
name = "audio-squarewave"

[[example]]
name = "audio-wav"

[[example]]
name = "audio-whitenoise"

[[example]]
required-features = ["image"]
name = "cursor"

[[example]]
name = "demo"

[[example]]
name = "game-controller"

[[example]]
required-features = ["unsafe_textures"]
name = "game-of-life-unsafe-textures"

[[example]]
name = "game-of-life"

[[example]]
required-features = ["gfx"]
name = "gfx-demo"

[[example]]
name = "haptic"

[[example]]
required-features = ["image"]
name = "image-demo"

[[example]]
name = "joystick"

[[example]]
name = "keyboard-state"

[[example]]
name = "message-box"

[[example]]
required-features = ["mixer"]
name = "mixer-demo"

[[example]]
name = "mouse-state"

[[example]]
name = "no-renderer"

[[example]]
name = "relative-mouse-state"

[[example]]
name = "renderer-target"

[[example]]
name = "events"

[[example]]
name = "renderer-texture"

[[example]]
name = "renderer-yuv"

[[example]]
required-features = ["ttf", "image"]
name = "resource-manager"

[[example]]
required-features = ["hidapi"]
name = "sensors"

[[example]]
required-features = ["ttf"]
name = "ttf-demo"

[[example]]
name = "window-properties"

[[example]]
required-features = ["raw-window-handle"]
name = "raw-window-handle-with-wgpu"

[package.metadata.vcpkg]
dependencies = ["sdl3"]

# dependencies required when building examples and tests for this crate
dev-dependencies = [
    "sdl3",
    #    "sdl3-image[libjpeg-turbo,tiff,libwebp]",
    #    "sdl3-ttf",
    #    "sdl3-gfx",
    #    "sdl3-mixer",
]
git = "https://github.com/microsoft/vcpkg"
rev = "acc3bcf" # release 2022.08.15

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
